# djangobytut

./: db.sqlite3  install-pkg.sh  pyproject.toml
CSV/: forms.py  models.py  urls.py  views.py
CSV/migrations/: 0001_initial.py
CSV/templates/: CSVRipper.html
PdfRipper/: apps.py  forms.py  models.py  urls.py  views.py
PdfRipper/migrations/: 0001_initial.py  0002_rename_venue_pic.py  0003_delete_pic.py  0004_pic.py
PdfRipper/templates/: PdfRipper.html
django_project/: settings.py  urls.py  views.py
home/: admin.py  forms.py  models.py  urls.py  views.py
home/migrations/: 0001_initial.py  0002_rename_members_member.py  0003_pic.py  0004_remove_pic_name.py
home/templates/: base.html  index.html  join.html
members/: urls.py  views.py
members/templates/authenticate/: Navigation.html  login.html  register_user.html
security_fix_backup/: settings.py
static/css/: style.css
