[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
pipenv = "^2022.7.24"
ghostscript = "^0.7"
python3-ghostscript = "^0.5.0"
opencv-contrib-python = "^4.6.0"
pytesseract = "^0.3.10"
pyocr = "^0.8.3"
tesseract = "^0.1.3"
[tool.poetry.dev-dependencies]
